--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -32,63 +32,63 @@ itertools = "0.10.1"
 node-polkadex-runtime = { path = '../runtime', version = '3.0.0' }
 
 # Substrate dependencies
-frame-benchmarking = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-frame-support = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-frame-benchmarking-cli = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-pallet-im-online = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-pallet-staking = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-pallet-transaction-payment-rpc = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-pallet-contracts = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-pallet-contracts-rpc = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-basic-authorship = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-client-api = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-chain-spec = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-consensus = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-sync-state-rpc = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-consensus-slots = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-consensus-uncles = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-authority-discovery = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-consensus-babe = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-consensus-babe-rpc = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-consensus-epochs = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-grandpa = {  git = "https://github.com/paritytech/substrate", branch = "master" ,package="sc-finality-grandpa"}
-sc-finality-grandpa-rpc = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-keystore = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-network = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-rpc = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-rpc-api = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-transaction-pool = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-api = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-authorship = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-block-builder = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-blockchain = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-consensus = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-consensus-babe = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-core = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-keystore = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-grandpa-primitives = {  git = "https://github.com/paritytech/substrate", branch = "master" , package="sp-finality-grandpa"}
-sp-inherents = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-timestamp = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-runtime = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-telemetry = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-transaction-pool = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-substrate-frame-rpc-system = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-service-test = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-keyring = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-frame-system = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-pallet-transaction-payment = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-transaction-pool-api = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-authority-discovery = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+frame-benchmarking = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+frame-support = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+frame-benchmarking-cli = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+pallet-im-online = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+pallet-staking = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+pallet-transaction-payment-rpc = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+pallet-contracts = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+pallet-contracts-rpc = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+sc-basic-authorship = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev" }
+sc-client-api = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+sc-chain-spec = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+sc-consensus = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev" }
+sc-sync-state-rpc = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev" }
+sc-consensus-slots = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev" }
+sc-consensus-uncles = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev" }
+sc-authority-discovery = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev" }
+sc-consensus-babe = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev" }
+sc-consensus-babe-rpc = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev" }
+sc-consensus-epochs = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev" }
+grandpa = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev" ,package="sc-finality-grandpa"}
+sc-finality-grandpa-rpc = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev" }
+sc-keystore = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+sc-network = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev" }
+sc-rpc = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+sc-rpc-api = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev" }
+sc-transaction-pool = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+sp-api = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+sp-authorship = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+sp-block-builder = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+sp-blockchain = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+sp-consensus = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev" }
+sp-consensus-babe = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev" }
+sp-core = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+sp-keystore = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev" }
+grandpa-primitives = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" , package="sp-finality-grandpa"}
+sp-inherents = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+sp-timestamp = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+sp-runtime = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+sc-telemetry = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+sp-transaction-pool = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+substrate-frame-rpc-system = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+sc-service-test = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "2.0.0-dev" }
+sp-keyring = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+frame-system = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+pallet-transaction-payment = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+sc-transaction-pool-api = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+sp-authority-discovery = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
 
 #Primitives
-polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'gj-substrate-master'}
-sc-executor = {  git = "https://github.com/paritytech/substrate", branch = "master" }
+polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'gj-substrate-master', default-features = false }
+sc-executor = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev" }
 
 
-sc-cli = {  git = "https://github.com/paritytech/substrate", branch = "master", features = ["wasmtime"] }
-node-executor = {  git = "https://github.com/paritytech/substrate", branch = "master", features = ["wasmtime"] }
-sc-service = {  git = "https://github.com/paritytech/substrate", branch = "master", features = ["wasmtime"]}
-sp-trie = { git = "https://github.com/paritytech/substrate", branch = "master", default-features= false, features = [
+sc-cli = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev", features = ["wasmtime"] }
+node-executor = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "3.0.0-dev", features = ["wasmtime"] }
+sc-service = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev", features = ["wasmtime"]}
+sp-trie = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features= false, features = [
 	"memory-tracker",
 ] }
 
@@ -104,10 +104,10 @@ regex = "1"
 platforms = "1.1"
 async-std = { version = "1.6.5", features = ["attributes"] }
 soketto = "0.4.2"
-sc-keystore =  {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-consensus = {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-consensus-babe =  {  git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-consensus-epochs =  {  git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-keystore =  {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+sc-consensus = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev" }
+sc-consensus-babe =  {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev" }
+sc-consensus-epochs =  {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "0.10.0-dev" }
 
 
 [features]
