--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -45,8 +45,12 @@ pallet-identity = { default-features = false, git = "https://github.com/parityte
 pallet-proxy = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
 pallet-tips = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
 pallet-recovery = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+pallet-contracts = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
 pallet-election-provider-multi-phase = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
 pallet-authority-discovery = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+pallet-contracts-primitives = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+pallet-contracts-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
 
 #end added
 #frame
@@ -82,19 +86,23 @@ frame-system-benchmarking = { default-features = false, git = "https://github.co
 
 
 # ORML Pallets
-orml-vesting = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", default-features = false }
+orml-vesting = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library", branch = "substrate-monthly-2021-09+1", default-features = false }
+orml-currencies = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library", branch = "substrate-monthly-2021-09+1", default-features = false }
+orml-traits = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library", branch = "substrate-monthly-2021-09+1", default-features = false }
+orml-tokens = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library", branch = "substrate-monthly-2021-09+1", default-features = false }
 
 # Local Dependecies
-polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'gj-substrate-master', default-features = false }
+polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives", branch = "substrate-monthly-2021-09+1", default-features=false}
+pallet-polkapool = { path = "../pallets/polkapool", default-features = false }
 erc20-pdex-migration-pallet = { path = "../pallets/pdex-migration", default-features = false }
 polkadex-ocex = { path = "../pallets/ocex", default-features = false }
-
+pallet-substratee-registry = { package="pallet-teerex", git = "https://github.com/Polkadex-Substrate/pallet-substratee-registry", branch = "substrate-monthly-2021-09+1", default-features = false }
 
 [build-dependencies]
 substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "5.0.0-dev" }
 
 [dev-dependencies]
-sp-io = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev" }
+sp-io = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false }
 
 
 [features]
@@ -147,10 +155,8 @@ std = [
     'sp-transaction-pool/std',
     'sp-version/std',
     "sp-npos-elections/std",
-
     "orml-vesting/std",
     "polkadex-primitives/std",
-
     "polkadex-ocex/std",
 ]
 runtime-benchmarks = [
