--- a/pallets/ocex/Cargo.toml
+++ b/pallets/ocex/Cargo.toml
@@ -12,25 +12,25 @@ codec = { version = "2.0.0", package = "parity-scale-codec", default-features = 
 hex = { version = "2.1.0", package = "rustc-hex", default-features = false }
 serde = { version = "1.0.101", optional = true }
 
-frame-support = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false }
-frame-system = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false }
-sp-io = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false }
-sp-core = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false }
-sp-std = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false }
+frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false }
+frame-system = { git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false }
+sp-io = {  git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false }
+sp-core = {  git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false }
+sp-std = {  git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false }
 sp-runtime = {  git = "https://github.com/paritytech/substrate", default-features = false }
 polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives", branch = "substrate-monthly-2021-09+1", default-features=false}
-frame-benchmarking = { git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false, optional = true }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false, optional = true }
 orml-currencies = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git",  branch="gj-substrate-master", default-features = false }
 orml-tokens = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git",  branch="gj-substrate-master", default-features = false }
 orml-traits = { git = "https://github.com/Gauthamastro/open-runtime-module-library.git",  branch="gj-substrate-master", default-features = false }
 
-pallet-balances = {git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false }
+pallet-balances = {git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false }
 pallet-substratee-registry = { package="pallet-teerex", git = "https://github.com/Polkadex-Substrate/pallet-substratee-registry", branch = "substrate-monthly-2021-09+1", default-features = false }
-timestamp= {git = "https://github.com/paritytech/substrate.git", package = "pallet-timestamp",tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false}
+timestamp= {git = "https://github.com/paritytech/substrate.git", package = "pallet-timestamp",branch = "master", version = "4.0.0-dev", default-features = false}
 polkadex-sgx-primitives = {git = "https://github.com/Polkadex-Substrate/polkadexTEE-worker", branch = "monthly-2021-09+1", default-features=false}
 
 [dev-dependencies]
-sp-keyring = {  git = "https://github.com/paritytech/substrate", tag = "monthly-2021-09+1", version = "4.0.0-dev", default-features = false }
+sp-keyring = {  git = "https://github.com/paritytech/substrate", branch = "master", version = "4.0.0-dev", default-features = false }
 
 [features]
 default = ["std"]
