--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -27,6 +27,7 @@ pallet-offences = { default-features = false, git = "https://github.com/parityte
 pallet-session = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 pallet-staking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 pallet-multisig = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 pallet-staking-reward-curve = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 pallet-utility = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
@@ -46,7 +47,10 @@ pallet-tips = { default-features = false, git = "https://github.com/paritytech/s
 pallet-recovery = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 pallet-election-provider-multi-phase = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 pallet-authority-discovery = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-
+# TODO check for IDO??? pallet-contracts-primitives = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+# pallet-contracts-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+# pallet-assets = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+# pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 #end added
 #frame
 frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
@@ -76,6 +80,8 @@ frame-election-provider-support = { default-features = false, git = "https://git
 
 # Used for the node template's RPCs
 frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+polkadex-ido-runtime-api = {path = "../pallets/Polkadex_Ido/rpc/runtime-api", default-features = false}
+pallet-polkadex-ido-primitives = {path = "../pallets/Polkadex_Ido/common",  default-features = false}
 
 # Used for runtime benchmarking
 frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master", optional = true }
@@ -85,10 +91,15 @@ pallet-society = { default-features = false, git = "https://github.com/paritytec
 
 # ORML Pallets
 orml-vesting = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", default-features = false }
+orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", default-features = false }
+orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", default-features = false }
+orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library.git", default-features = false }
 
 # Local Dependecies
 polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'gj-substrate-master', default-features = false }
 pdex-migration = { path = "../pallets/pdex-migration", default-features = false }
+# polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'master', default-features = false }
+polkadex-ido = { path = "../pallets/Polkadex_Ido", default-features = false }
 
 [build-dependencies]
 substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
@@ -132,6 +143,7 @@ std = [
     'pallet-transaction-payment-rpc-runtime-api/std',
     'pallet-treasury/std',
     'pallet-collective/std',
+    'pallet-randomness-collective-flip/std',
     'pallet-elections-phragmen/std',
     'frame-election-provider-support/std',
     'pallet-membership/std',
@@ -150,10 +162,11 @@ std = [
     'sp-transaction-pool/std',
     'sp-version/std',
     "sp-npos-elections/std",
-
     "orml-vesting/std",
     "polkadex-primitives/std",
-    "pdex-migration/std"
+    "pdex-migration/std",
+    "polkadex-ido/std",
+    "polkadex-ido-runtime-api/std"
 ]
 runtime-benchmarks = [
     "frame-benchmarking",
